--- a/deployment/kubernetes/agents/base/kustomization.yaml
+++ b/deployment/kubernetes/agents/base/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - cluster-agent-config-map.yaml
   - cluster-agent.yaml
   - agent-rbac.yaml
+  - agent-integrations-config-map.yaml
   - agent-config-map.yaml
   - agent.yaml
