--- a/test/molecule-role/molecule/kubernetes/cleanup.yml
+++ b/test/molecule-role/molecule/kubernetes/cleanup.yml
@@ -9,3 +9,9 @@
       shell: "if kubectl delete ns {{ namespace }}; then kubectl delete ns test-global-lock; fi"
       environment:
         KUBECONFIG: /home/ubuntu/deployment/aws-eks/tf-cluster/kubeconfig
+    - name: Delete manifests for stackstate node agent and cluster agent
+      command: kubectl delete -k overlays
+      args:
+        chdir: /home/ubuntu/deployment/agents
+      environment:
+        KUBECONFIG: /home/ubuntu/deployment/aws-eks/tf-cluster/kubeconfig
