--- a/deployment/kubernetes/agents/base/agent-integrations-config-map.yaml
+++ b/deployment/kubernetes/agents/base/agent-integrations-config-map.yaml
@@ -7,7 +7,8 @@ data:
   config: |
     init_config:
     instances:
-      - state_location: "/etc/stackstate-agent/state.d/agent_integration_sample.d"
+      - url: "http://localhost"
+        state_location: "/etc/stackstate-agent/state.d/agent_integration_sample.d"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
