--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -146,6 +146,12 @@ unit_tests:
     - gofmt -l -w -s ./pkg ./cmd
 
     - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --build-exclude clusterchecks,kubelet
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+      - stuck_or_timeout_failure
+      - script_failure
   tags:
     - sts-aws
 
@@ -155,6 +161,12 @@ integration_tests:
     - deps_deb
   script:
     - inv -e integration-tests --race --remote-docker
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+      - stuck_or_timeout_failure
+      - script_failure
   tags:
     - sts-aws
 
@@ -177,6 +189,12 @@ docker_integration_tests:
     - docker:18.09-dind
   script:
     - inv -e docker.integration-tests
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+      - stuck_or_timeout_failure
+      - script_failure
   tags:
     - sts-k8s-m-runner
 
@@ -280,6 +298,11 @@ build_deb:
         - $CI_PROJECT_DIR/version.txt
         - $CI_PROJECT_DIR/outcomes/binary/trace-agent
     expire_in: 1 week
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+
 
 build_rpm:
   stage: build_and_test
@@ -326,6 +349,11 @@ build_rpm:
         - $CI_PROJECT_DIR/outcomes/Dockerfiles/manifests
         - $CI_PROJECT_DIR/version.txt
     expire_in: 1 week
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+
 
 build_win:
   stage: build_and_test
@@ -353,6 +381,13 @@ build_win:
       - "version.txt"
   tags:
     - agent_windows_6
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+      - stuck_or_timeout_failure
+      - script_failure
+
 
 test_deb_renaming:
   stage: pre_release
@@ -402,6 +437,13 @@ pre_release_win:
     - cd %WIN_CI_PROJECT_DIR%/cmd/agent && aws -e "Aws::S3::Resource.new.bucket(ENV['STS_AWS_TEST_BUCKET_WIN']).object('install.ps1').upload_file('./install.ps1', acl:'public-read')"
   tags:
     - agent_windows_6
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+      - stuck_or_timeout_failure
+      - script_failure
+
 
 pre_release_rpm:
   stage: pre_release
@@ -481,6 +523,12 @@ pre_release_cluster_agent_image:
     - export MOLECULE_RUN_ID=${CI_JOB_ID}
     - export LC_CTYPE=en_US.UTF-8
     - export LANG=en_US.UTF-8
+  retry:
+    max: 2
+    when:
+      - runner_system_failure
+      - stuck_or_timeout_failure
+      - script_failure
 
 molecule_tests_vms:
   stage: acceptance
