integrations compose prepare fixes

--- a/test/molecule-role/molecule/integrations/prepare.yml
+++ b/test/molecule-role/molecule/integrations/prepare.yml
@@ -5,6 +5,19 @@
   vars_files:
     - common_vars.yml
   tasks:
+    - name: Install provisioning dependencies (1/2)
+      apt:
+        name:
+          python3-pip
+        state: present
+      become: yes
+      register: pip3_res
+      retries: 15
+      delay: 5
+      until: pip3_res is success
+    - name: Install provisioning dependencies (2/2)
+      shell: pip3 install docker
+      become: yes
     - name: Docker login
       docker_login:
         registry: quay.io
