--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,8 @@ deps_deb:
 
 .cluster_agent_base: &cluster_agent_base
   rules:
-    - changes:
+    - if: '$CI_COMMIT_BRANCH =~ /.*/'
+      changes:
       - "cmd/cluster-agent/*"
       - "pkg/clusteragent/*"
       - "Dockerfiles/cluster-agent/*"
@@ -109,10 +110,9 @@ deps_deb:
 .non_cluster_agent_base: &non_cluster_agent_base
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
-    - if: '$CI_COMMIT_TAG =~ /*.*.*/'
+    - if: '$CI_COMMIT_TAG =~ /.*\..*\..*/'
     - if: $CI_MERGE_REQUEST_IID
       when: always
-
 
 deps_rpm:
   <<: *non_cluster_agent_base
