--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -390,6 +390,7 @@ build_rpm:
 
 
 build_win:
+  <<: *non_cluster_agent_base
   stage: build_and_test
   needs:
     - deps_win
@@ -454,6 +455,7 @@ pre_release_deb:
     - cd $CI_PROJECT_DIR/cmd/agent && aws.rb -e "Aws::S3::Resource.new.bucket(ENV['STS_AWS_TEST_BUCKET']).object('install.sh').upload_file('./install.sh', acl:'public-read')"
 
 pre_release_win:
+  <<: *non_cluster_agent_base
   stage: pre_release
   needs:
     - deps_win
@@ -585,6 +587,7 @@ molecule_tests_vms:
     expire_in: 1 week
 
 molecule_tests_compose:
+  <<: *non_cluster_agent_base
   stage: acceptance
   needs:
     - pre_release_image
@@ -650,6 +653,7 @@ molecule_tests_secrets:
     expire_in: 1 week
 
 molecule_tests_integrations:
+  <<: *non_cluster_agent_base
   stage: acceptance
   needs:
     - pre_release_image
@@ -697,6 +701,7 @@ release_deb:
     - triggers
 
 release_rpm:
+  <<: *non_cluster_agent_base
   stage: release
   dependencies:
     - build_rpm
@@ -712,6 +717,7 @@ release_rpm:
     - triggers
 
 release_win:
+  <<: *non_cluster_agent_base
   stage: release
   dependencies:
     - deps_win
