--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,7 +92,14 @@ deps_deb:
       - $CI_PROJECT_DIR/version.txt
     expire_in: 1 week
 
+.non_cluster_agent_base: &non_cluster_agent_base
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_TAG =~ /.*\..*\..*/'
+    - if: $CI_MERGE_REQUEST_IID
+
 .cluster_agent_base: &cluster_agent_base
+  <<: *non_cluster_agent_base
   rules:
     - if: '$CI_COMMIT_BRANCH =~ /.*/'
       changes:
@@ -105,14 +112,6 @@ deps_deb:
       - "pkg/util/kubernetes/*"
       - "pkg/util/docker/*"
       - "test/molecule-role/molecule/kubernetes/*"
-      when: always
-
-.non_cluster_agent_base: &non_cluster_agent_base
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
-    - if: '$CI_COMMIT_TAG =~ /.*\..*\..*/'
-    - if: $CI_MERGE_REQUEST_IID
-      when: always
 
 deps_rpm:
   <<: *non_cluster_agent_base
