--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,8 +110,9 @@ deps_deb:
       when: never
 
 .cluster_agent_base: &cluster_agent_base
-  <<: *agent_base
   rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_TAG =~ /.*\..*\..*/'
     - if: $CI_MERGE_REQUEST_IID
       changes:
       - "cmd/cluster-agent/*"
