--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,8 +113,8 @@ deps_deb:
 
 .cluster_agent_base: &cluster_agent_base
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
-    - if: '$CI_COMMIT_TAG =~ /.*\..*\..*/'
+#    - if: '$CI_COMMIT_BRANCH == "master"'
+#    - if: '$CI_COMMIT_TAG =~ /.*\..*\..*/'
     - if: $CI_MERGE_REQUEST_IID
       changes: *cluster_agent_changes
       when: always
