STAC-12605: Test cluster-agent 10 [cluster_agent]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,9 @@ deps_deb:
       when: never
 
 .cluster_agent_base: &cluster_agent_base
+  rules:
+    - if: '$CI_COMMIT_MESSAGE =~ /.*\[cluster_agent\].*/'
+      when: on_success
 
 
 deps_rpm:
