--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ deps_deb:
       when: never
     - if: $CI_COMMIT_MESSAGE !~ /\[cluster_agent]/
       when: on_success
-
+# test
 .cluster_agent_base: &cluster_agent_base
   rules:
     - if: $CI_COMMIT_MESSAGE =~ /\[cluster_agent]/
