--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -176,7 +176,7 @@ unit_tests_cluster_agent:
     #TODO: check why formatting rules differ from previous step
     - gofmt -l -w -s ./pkg ./cmd
 
-    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --build-include docker,linux,kubeapiserver
+    - inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --build-include docker,linux,kubeapiserver,cpython
   retry:
     max: 2
     when:
