Added imagePullPolicy IfNotPresent to the kubernetes workload test

--- a/deployment/kubernetes/test_connections/pod-to-service-cluster-ip.yaml
+++ b/deployment/kubernetes/test_connections/pod-to-service-cluster-ip.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   containers:
     - image: itsthenetwork/alpine-ncat
+      imagePullPolicy: IfNotPresent
       name: server
       command: ["/bin/bash", "-c", "ncat -vv --broker --listen -p 123 > /dev/null"]
       ports:
@@ -36,6 +37,7 @@ metadata:
 spec:
   containers:
     - image: jgkamat/netcat
+      imagePullPolicy: IfNotPresent
       name: client
       command: ["/bin/bash", "-c", "yes | nc -vv pod-service 321"]
   nodeSelector:
