--- a/deployment/kubernetes/test_workloads/apple.yaml
+++ b/deployment/kubernetes/test_workloads/apple.yaml
@@ -8,6 +8,7 @@ spec:
   containers:
     - name: apple-app
       image: hashicorp/http-echo
+      imagePullPolicy: IfNotPresent
       args:
         - "-text=apple"
 
@@ -21,4 +22,4 @@ spec:
   selector:
     app: apple
   ports:
-    - port: 5678 # Default port for image	
+    - port: 5678 # Default port for image
