--- a/deployment/kubernetes/test_connections/pod-localhost.yaml
+++ b/deployment/kubernetes/test_connections/pod-localhost.yaml
@@ -5,8 +5,10 @@ metadata:
 spec:
   containers:
     - image: jgkamat/netcat
+      imagePullPolicy: IfNotPresent
       name: server
       command: ["/bin/bash", "-c", "nc -l -p 234 > /dev/null"]
     - image: jgkamat/netcat
+      imagePullPolicy: IfNotPresent
       name: client
       command: ["/bin/bash", "-c", "yes | nc localhost 234"]
