--- a/deployment/kubernetes/test_connections/pod-to-pod-headless.yaml
+++ b/deployment/kubernetes/test_connections/pod-to-pod-headless.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   containers:
     - image: itsthenetwork/alpine-ncat
+      imagePullPolicy: IfNotPresent
       name: headless-server
       command: ["/bin/bash", "-c", "ncat -vv --broker --listen -p 543 > /dev/null"]
       ports:
@@ -36,6 +37,7 @@ metadata:
 spec:
   containers:
     - image: jgkamat/netcat
+      imagePullPolicy: IfNotPresent
       name: headless-client
       command: ["/bin/bash", "-c", "yes | nc -vv headless-service 543"]
   nodeSelector:
