--- a/deployment/kubernetes/test_workloads/banana.yaml
+++ b/deployment/kubernetes/test_workloads/banana.yaml
@@ -8,6 +8,7 @@ spec:
   containers:
     - name: banana-app
       image: hashicorp/http-echo
+      imagePullPolicy: IfNotPresent
       args:
         - "-text=banana"
 
