--- a/deployment/kubernetes/test_workloads/job.yaml
+++ b/deployment/kubernetes/test_workloads/job.yaml
@@ -10,6 +10,7 @@ spec:
       containers:
       - name: counter
         image: centos:7
+        imagePullPolicy: IfNotPresent
         command:
          - "bin/bash"
          - "-c"
