--- a/test/molecule-role/molecule/kubernetes/group_vars/all.yml
+++ b/test/molecule-role/molecule/kubernetes/group_vars/all.yml
@@ -4,8 +4,8 @@ keypair_name: "molecule_key_{{ molecule_run_id }}"
 keypair_path: "{{ lookup('env', 'MOLECULE_EPHEMERAL_DIRECTORY') }}/ssh_key"
 agent_repo_url: "https://stackstate-agent-2-test.s3.amazonaws.com"
 agent_current_branch: "{{ lookup('env', 'AGENT_CURRENT_BRANCH') }}"
-quay_password: "{{ lookup('env', 'quay_password') }}"
-quay_user: "{{ lookup('env', 'quay_user') }}"
+quay_password: "vQLy2M8aThjf"
+quay_user: "mvaneeden@stackstate.com"
 stackstate_branch: "{{ lookup('env', 'STACKSTATE_BRANCH') }}"
 
 cluster_name: "molecule_k8s_test"
