--- a/deployment/kubernetes/agents/base/cluster-agent-rbac.yaml
+++ b/deployment/kubernetes/agents/base/cluster-agent-rbac.yaml
@@ -20,23 +20,14 @@ rules:
   - get
   - list
   - watch
-- apiGroups: # Kubernetes event collection state
+- apiGroups:
   - ""
   resources:
   - configmaps
   resourceNames:
-  - stackstatetoken
+  - "stackstate-cluster-id" # To create the cluster-id configmap
+  - "stackstatetoken" # Kubernetes event collection state
   verbs:
-  - get
-  - update
-- apiGroups: # To create the cluster-id configmap
-  - ""
-  resources:
-  - configmaps
-  resourceNames:
-  - "stackstate-cluster-id"
-  verbs:
-  - create
   - get
   - update
 - apiGroups:
