--- a/pkg/config/config_template.yaml
+++ b/pkg/config/config_template.yaml
@@ -328,13 +328,13 @@ api_key:
 ## Metadata collection should always be enabled, except if you are running several
 ## agents/dsd instances per host. In that case, only one Agent should have it on.
 ## WARNING: disabling it on every Agent leads to display and billing issues.
-#
-# enable_metadata_collection: true
+# [sts] disable metadata collection
+enable_metadata_collection: false
 
 ## @param enable_gohai - boolean - optional - default: true
 ## Enable the gohai collection of systems data.
-#
-# enable_gohai: true
+# [sts] disable gohai collection
+enable_gohai: false
 
 ## @param server_timeout - integer - optional - default: 15
 ## IPC api server timeout in seconds.
