kubernetes event changes (#299)
* kubernetes event changes

* try creating config maps

* disable metadata + gohai collection, print json string of event

--- a/deployment/kubernetes/agents/base/cluster-agent-rbac.yaml
+++ b/deployment/kubernetes/agents/base/cluster-agent-rbac.yaml
@@ -21,6 +21,16 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - configmaps
+  resourceNames:
+  - "stackstate-cluster-id" # To create the cluster-id configmap
+  - "stackstatetoken" # Kubernetes event collection state
+  verbs:
+  - get
+  - update
+- apiGroups:
   - "storage.k8s.io"
   resources:
   - volumeattachments
