Upstream updates 7 21 kubernetes (#300)
* rename binary to stackstate-cluster-agent

* comment out leader election to test it

* register kubernetes checks, add configuration to skip leader election

* skip cluster name validation

* fix imports for cluster agent

* init batcher in cluster and main agent

* Added imagePullPolicy IfNotPresent to the kubernetes workload test

* Change the t2.small to t2.medium for eks
Changed the spot price and instance type for eks

* re-implement services, ingresses, endpoints

* Adding test print for log testing

* Removed print

* Removed details

* Removed . run file

* Force commit after resetting the Access ID & Key, Quay Details and Original State

* Testing datadog metric replacements

* Remove duplicate pkg/trace/info/stats branding replacement

* Testing with vendor file

* linting issue fixes

* update k8s skipping config

* update k8s skipping config

* kubernetes_events codebase updated to the latest kubernetes_event_mapper

* kubernetes event changes (#299)

* kubernetes event changes

* try creating config maps

* disable metadata + gohai collection, print json string of event

Co-authored-by: melcom <melcomve@outlook.com>
Co-authored-by: Melcom <32292421+MelcomVE@users.noreply.github.com>

--- a/pkg/config/config_template.yaml
+++ b/pkg/config/config_template.yaml
@@ -328,13 +328,13 @@ api_key:
 ## Metadata collection should always be enabled, except if you are running several
 ## agents/dsd instances per host. In that case, only one Agent should have it on.
 ## WARNING: disabling it on every Agent leads to display and billing issues.
-#
-# enable_metadata_collection: true
+# [sts] disable metadata collection
+enable_metadata_collection: false
 
 ## @param enable_gohai - boolean - optional - default: true
 ## Enable the gohai collection of systems data.
-#
-# enable_gohai: true
+# [sts] disable gohai collection
+enable_gohai: false
 
 ## @param server_timeout - integer - optional - default: 15
 ## IPC api server timeout in seconds.
@@ -1737,6 +1737,10 @@ network_tracer_config:
 ## regardless of the value of this parameter.
 #
 # disable_cluster_name_tag_key: false
+
+## @param skip_validate_clustername - boolean - optional - default: true
+## Disables the kubernetes cluster name validation in the StackState cluster agent.
+skip_validate_clustername: true
 
 {{ end -}}
 {{- if .CloudFoundryBBS }}
