--- a/test/molecule-role/molecule/vms/prepare.yml
+++ b/test/molecule-role/molecule/vms/prepare.yml
@@ -292,6 +292,13 @@
               short_lived_network_relations:
                 enabled: true
                 qualifier_secs: {{ network_relation_filter_short_lived_qualifier_secs }}
+    - name: "Set debug level for agent logs"
+      become: true
+      lineinfile:
+        path: "/etc/stackstate-agent/stackstate.yaml"
+        insertafter: "# log_level: 'info'"
+        line: |2
+          log_level: 'debug'
     - name: "Restart StackState Agent Service"
       become: true
       shell: "systemctl restart stackstate-agent.service"
