--- a/test/molecule-role/molecule/vms/prepare.yml
+++ b/test/molecule-role/molecule/vms/prepare.yml
@@ -317,7 +317,7 @@
       shell: "nohup ncat --broker --listen -p {{ connection_port_after_start_fedora }} &"
       become: true
     - name: Open listening port for windows {{ connection_port_after_start_windows }}
-      shell: "nohup ncat --broker --listen -p {{ connection_port_after_start_windows }} &"
+      shell: "nohup yes | sudo ncat --broker --listen -p {{ connection_port_after_start_windows }} &"
       become: true
     - name: Forward DNAT port {{ dnat_service_port }} to {{ dnat_server_port }}
       iptables:
@@ -358,17 +358,6 @@
     - name: Wait a bit for the ubuntu machine to start
       pause:
         seconds: 10
-
-    - name: "Wait for port {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} port {{ connection_port_after_start_windows }}  to become open on the host, don't start checking for 10 seconds"
-      win_wait_for:
-        host: "{{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }}"
-        port: "{{ connection_port_after_start_windows }}"
-        delay: 10
-      retries: 10
-      delay: 10
-      register: wait_result
-      until: wait_result is succeeded
-
     - name: Connect to Ubuntu agent P2P (1/1)
       win_command: nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_windows }}
       async: "{{ max_test_time }}"
