--- a/pkg/config/config_template.yaml
+++ b/pkg/config/config_template.yaml
@@ -812,6 +812,24 @@ process_config:
      process: 30
      connections: 30
 
+    # [STS] Relation and Network cache
+  ## Relation Cache is used to keep state of the known network relations for this agent, with items expiring after relation_cache_duration minutes. The default is 5 minutes.
+  #  relation_cache_duration_min: 5
+  ## Process Cache is used to keep state of the known processes for this agent, with items expiring after process_cache_duration minutes. The default is 5 minutes.
+  #  process_cache_duration_min: 5
+  ## Filters are used to filter out processes or network connections based on some condition
+  #  filters:
+  ##   The Short-Lived Processes filter is used to filter out process that are observed for less than x seconds, with the default being 60 seconds.
+  #    short_lived_processes:
+  #      enabled: true
+  #      qualifier_secs: 60
+  ##   The Short-Lived Relations filter is used to filter out network relations that are observed for less than x seconds, with the default being 60 seconds.
+  ##   Short-Lived network relations are defined as network connections that do not occur frequently between processes / services. Multiple short-lived connections
+  ##   between the same processes / services are considered a Long-Lived network relation, while a once-off network connection is filtered out and not reported to StackState.
+  #    short_lived_network_relations:
+  #      enabled: true
+  #      qualifier_secs: 60
+
   # [STS] DEFAULTS for agent 2.6.0
    ##  Process blacklisting is used to filter out unwanted processes and not report them to StackState.
   process_blacklist:
@@ -875,8 +893,8 @@ process_config:
 
 # [STS] defaults
 network_tracer_config:
-   network_tracing_enabled: "true"
-   initial_connections_from_proc: "true"
+  network_tracing_enabled: "true"
+  initial_connections_from_proc: "true"
 # /[STS] defaults
 
 {{ end -}}
