interval connection + assertions

--- a/test/molecule-role/molecule/vms/common_vars.yml
+++ b/test/molecule-role/molecule/vms/common_vars.yml
@@ -12,6 +12,7 @@ connection_port_before_start_fedora: 125
 connection_port_after_start_fedora: 126
 connection_port_before_start_windows: 127
 connection_port_after_start_windows: 128
+connection_port_after_start_windows_interval: 129
 dnat_service_port: 1234
 dnat_server_port: 49123
 max_test_time: 3500  # in seconds
